--- a/Store.Web/appsettings.json
+++ b/Store.Web/appsettings.json
@@ -8,5 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server= .;Database = StoreApi;Trusted_Connection =True;TrustServerCertificate=True;"
-  }
+  },
+  "BaseUrl": "https://localhost:7007"
+
 }
